# dependency-graphql

./: .gitignore  .mypy.ini  .pylintrc  Makefile  README.md  TODO.md  dependency_graphql.py  mypy.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yml
src/: __init__.py  dependency_graphql.py
