[metadata]
name = dependency-graphql
version = attr: src.__version__
author = Fionn Fitzmaurice
description = Dependency graphs for GitHub repositories
long_description = file: README.md
long_description_content_type = text/markdown
url = "https://github.com/fionn/dependency-graphql"
classifiers = 
    Programming Language :: Python :: 3
    Development Status :: 3 - Alpha

[options]
zip_safe = true
pymodules = dependency-graphql
packages = find:
python_requires = >=3.7
install_requires = 
    requests
    anytree

[options.extras_require]
dev =
    pylint
    mypy

[options.entry_points]
console_scripts = dependency-graphql = src.dependency_graphql:main
