[metadata]
name = dependency-graphql
version = attr: src.__version__
author = Fionn Fitzmaurice
description = Dependency graphs for GitHub repositories
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fionn/dependency-graphql
keywords =
    github
    dependency graph
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Typing :: Typed
project_urls =
    Source Code = https://github.com/fionn/dependency-graphql
    Changelog = https://github.com/fionn/dependency-graphql/tags
    Documentation = https://github.com/fionn/dependency-graphql/blob/master/README.md
    Bug Tracker = https://github.com/fionn/dependency-graphql/issues
    PyPI = https://pypi.org/project/dependency-graphql/
    Download = https://github.com/fionn/dependency-graphql/archive/refs/heads/master.zip

[options]
zip_safe = true
pymodules = dependency-graphql
packages = find:
python_requires = >=3.7
install_requires =
    requests
    anytree

[options.extras_require]
dev =
    pylint
    mypy
    types-requests

[options.entry_points]
console_scripts = dependency-graphql = src.dependency_graphql:main
